@@ -15,6 +15,7 @@ Release 1.3-SNAPSHOT
   its a bug in the driver.
 * Fixed persistence of the SID attribute of a connection to the 
   connections.xml file. 
+* Fixed NullPointerException when maxrows_method=driver 
 
 Release 1.2
 * Added new mechanism to \connect to allow a logical name to be assigned
